tests/c_headers/kernel.h


struct k_thread;
#define K_NO_WAIT Z_TIMEOUT_NO_WAIT
struct k_work;
struct k_work_q;
struct k_work_delayable;
struct k_work_sync;
typedef void (*k_work_handler_t)(struct k_work *work);
int k_work_busy_get(const struct k_work *work);
int k_work_submit_to_queue(struct k_work_q *queue,
			   struct k_work *work);
bool k_work_flush(struct k_work *work,
		  struct k_work_sync *sync);
int k_work_cancel(struct k_work *work);
void k_work_init_delayable(struct k_work_delayable *dwork,
			   k_work_handler_t handler);
int k_work_delayable_busy_get(const struct k_work_delayable *dwork);
int k_work_schedule_for_queue(struct k_work_q *queue,
			       struct k_work_delayable *dwork,
			       k_timeout_t delay);
int k_work_reschedule_for_queue(struct k_work_q *queue,
				 struct k_work_delayable *dwork,
				 k_timeout_t delay);
extern int k_work_reschedule(struct k_work_delayable *dwork,
				     k_timeout_t delay);
bool k_work_flush_delayable(struct k_work_delayable *dwork,
			    struct k_work_sync *sync);
int k_work_cancel_delayable(struct k_work_delayable *dwork);
bool k_work_cancel_delayable_sync(struct k_work_delayable *dwork,
				  struct k_work_sync *sync);
enum {
	K_WORK_RUNNING_BIT = 0,
	K_WORK_CANCELING_BIT = 1,
	K_WORK_QUEUED_BIT = 2,
	K_WORK_DELAYED_BIT = 3,
	K_WORK_MASK = BIT(K_WORK_DELAYED_BIT) | BIT(K_WORK_QUEUED_BIT)
		| BIT(K_WORK_RUNNING_BIT) | BIT(K_WORK_CANCELING_BIT),
	K_WORK_DELAYABLE_BIT = 8,
	K_WORK_DELAYABLE = BIT(K_WORK_DELAYABLE_BIT),
	K_WORK_QUEUE_STARTED_BIT = 0,
	K_WORK_QUEUE_STARTED = BIT(K_WORK_QUEUE_STARTED_BIT),
	K_WORK_QUEUE_BUSY_BIT = 1,
	K_WORK_QUEUE_BUSY = BIT(K_WORK_QUEUE_BUSY_BIT),
	K_WORK_QUEUE_DRAIN_BIT = 2,
	K_WORK_QUEUE_DRAIN = BIT(K_WORK_QUEUE_DRAIN_BIT),
	K_WORK_QUEUE_PLUGGED_BIT = 3,
	K_WORK_QUEUE_PLUGGED = BIT(K_WORK_QUEUE_PLUGGED_BIT),
	K_WORK_QUEUE_NO_YIELD_BIT = 8,
	K_WORK_QUEUE_NO_YIELD = BIT(K_WORK_QUEUE_NO_YIELD_BIT),
	K_WORK_RUNNING = BIT(K_WORK_RUNNING_BIT),
	K_WORK_CANCELING = BIT(K_WORK_CANCELING_BIT),
	K_WORK_QUEUED = BIT(K_WORK_QUEUED_BIT),
	K_WORK_DELAYED = BIT(K_WORK_DELAYED_BIT),
};
struct k_work {
	sys_snode_t node;
	k_work_handler_t handler;
	struct k_work_q *queue;
	uint32_t flags;
};
#define Z_WORK_INITIALIZER(work_handler) { \
	.handler = work_handler, \
}
struct k_work_delayable {
	struct k_work work;
	struct _timeout timeout;
	struct k_work_q *queue;
};
#define Z_WORK_DELAYABLE_INITIALIZER(work_handler) { \
	.work = { \
		.handler = work_handler, \
		.flags = K_WORK_DELAYABLE, \
	}, \
}
#define K_WORK_DELAYABLE_DEFINE(work, work_handler) \
	struct k_work_delayable work \
	  = Z_WORK_DELAYABLE_INITIALIZER(work_handler)
struct z_work_flusher {
	struct k_work work;
	struct k_sem sem;
};
struct z_work_canceller {
	sys_snode_t node;
	struct k_work *work;
	struct k_sem sem;
};
struct k_work_sync {
	union {
		struct z_work_flusher flusher;
		struct z_work_canceller canceller;
	};
};
struct k_work_q {
	struct k_thread thread;
	sys_slist_t pending;
	_wait_q_t notifyq;
	_wait_q_t drainq;
	uint32_t flags;
};
struct k_work_user;
typedef void (*k_work_user_handler_t)(struct k_work_user *work);
enum {
	K_WORK_USER_STATE_PENDING,	
};
struct k_work_user {
	void *_reserved;		
	k_work_user_handler_t handler;
	atomic_t flags;
};
#define Z_WORK_USER_INITIALIZER(work_handler) \
	{ \
	._reserved = NULL, \
	.handler = work_handler, \
	.flags = 0 \
	}
#define K_WORK_USER_DEFINE(work, work_handler) \
	struct k_work_user work = Z_WORK_USER_INITIALIZER(work_handler)
static inline void k_work_user_init(struct k_work_user *work,
				    k_work_user_handler_t handler)
{
	*work = (struct k_work_user)Z_WORK_USER_INITIALIZER(handler);
}
static inline bool k_work_user_is_pending(struct k_work_user *work)
{
	return atomic_test_bit(&work->flags, K_WORK_USER_STATE_PENDING);
}