src/zephyr_c/kernel/zk_work.nim


## * @brief Reschedule a work item to a queue after a delay.
##
##  Unlike k_work_schedule_for_queue() this function can change the deadline of
##  a scheduled work item, and will schedule a work item that isn't idle
##  (e.g. is submitted or running).  This function does not affect ("unsubmit")
##  a work item that has been submitted to a queue.
##
##  @funcprops \isr_ok
##
##  @param queue the queue on which the work item should be submitted after the
##  delay.
##
##  @param dwork pointer to the delayable work item.
##
##  @param delay the time to wait before submitting the work item.  If @c
##  K_NO_WAIT this is equivalent to k_work_submit_to_queue() after canceling
##  any previous scheduled submission.
##
##  @note If delay is @c K_NO_WAIT ("no delay") the return values are as with
##  k_work_submit_to_queue().
##
##  @retval 0 if delay is @c K_NO_WAIT and work was already on a queue
##  @retval 1 if
##  * delay is @c K_NO_WAIT and work was not submitted but has now been queued
##    to @p queue; or
##  * delay not @c K_NO_WAIT and work has been scheduled
##  @retval 2 if delay is @c K_NO_WAIT and work was running and has been queued
##  to the queue that was running it
##  @retval -EBUSY if @p delay is @c K_NO_WAIT and
##          k_work_submit_to_queue() fails with this code.
##  @retval -EINVAL if @p delay is @c K_NO_WAIT and
##          k_work_submit_to_queue() fails with this code.
##  @retval -ENODEV if @p delay is @c K_NO_WAIT and
##          k_work_submit_to_queue() fails with this code.
##
proc k_work_reschedule_for_queue*(queue: ptr k_work_q;
                                  dwork: ptr k_work_delayable; delay: k_timeout_t): cint {.
    importc: "k_work_reschedule_for_queue", header: "kernel.h".}


## * @brief Reschedule a work item to the system work queue after a
##  delay.
##
##  This is a thin wrapper around k_work_reschedule_for_queue(), with all the
##  API characteristcs of that function.
##
##  @param dwork pointer to the delayable work item.
##
##  @param delay the time to wait before submitting the work item.
##
##  @return as with k_work_reschedule_for_queue().
##
proc k_work_reschedule*(dwork: ptr k_work_delayable; delay: k_timeout_t): cint {.
    importc: "k_work_reschedule", header: "kernel.h".}


## * @brief Flush delayable work.
##
##  If the work is scheduled, it is immediately submitted.  Then the caller
##  blocks until the work completes, as with k_work_flush().
##
##  @note Be careful of caller and work queue thread relative priority.  If
##  this function sleeps it will not return until the work queue thread
##  completes the tasks that allow this thread to resume.
##
##  @note Behavior is undefined if this function is invoked on @p dwork from a
##  work queue running @p dwork.
##
##  @param dwork pointer to the delayable work item.
##
##  @param sync pointer to an opaque item containing state related to the
##  pending cancellation.  The object must persist until the call returns, and
##  be accessible from both the caller thread and the work queue thread.  The
##  object must not be used for any other flush or cancel operation until this
##  one completes.  On architectures with CONFIG_KERNEL_COHERENCE the object
##  must be allocated in coherent memory.
##
##  @retval true if call had to wait for completion
##  @retval false if work was already idle
##
proc k_work_flush_delayable*(dwork: ptr k_work_delayable; sync: ptr k_work_sync): bool {.
    importc: "k_work_flush_delayable", header: "kernel.h".}


## * @brief Cancel delayable work.
##
##  Similar to k_work_cancel() but for delayable work.  If the work is
##  scheduled or submitted it is canceled.  This function does not wait for the
##  cancellation to complete.
##
##  @note The work may still be running when this returns.  Use
##  k_work_flush_delayable() or k_work_cancel_delayable_sync() to ensure it is
##  not running.
##
##  @note Canceling delayable work does not prevent rescheduling it.  It does
##  prevent submitting it until the cancellation completes.
##
##  @funcprops \isr_ok
##
##  @param dwork pointer to the delayable work item.
##
##  @return the k_work_delayable_busy_get() status indicating the state of the
##  item after all cancellation steps performed by this call are completed.
##
proc k_work_cancel_delayable*(dwork: ptr k_work_delayable): cint {.
    importc: "k_work_cancel_delayable", header: "kernel.h".}


## * @brief Cancel delayable work and wait.
##
##  Like k_work_cancel_delayable() but waits until the work becomes idle.
##
##  @note Canceling delayable work does not prevent rescheduling it.  It does
##  prevent submitting it until the cancellation completes.
##
##  @note Be careful of caller and work queue thread relative priority.  If
##  this function sleeps it will not return until the work queue thread
##  completes the tasks that allow this thread to resume.
##
##  @note Behavior is undefined if this function is invoked on @p dwork from a
##  work queue running @p dwork.
##
##  @param dwork pointer to the delayable work item.
##
##  @param sync pointer to an opaque item containing state related to the
##  pending cancellation.  The object must persist until the call returns, and
##  be accessible from both the caller thread and the work queue thread.  The
##  object must not be used for any other flush or cancel operation until this
##  one completes.  On architectures with CONFIG_KERNEL_COHERENCE the object
##  must be allocated in coherent memory.
##
##  @retval true if work was not idle (call had to wait for cancellation of a
##  running handler to complete, or scheduled or submitted operations were
##  cancelled);
##  @retval false otherwise
##
proc k_work_cancel_delayable_sync*(dwork: ptr k_work_delayable;
                                  sync: ptr k_work_sync): bool {.
    importc: "k_work_cancel_delayable_sync", header: "kernel.h".}
const ## *
      ##  @cond INTERNAL_HIDDEN
      ##
      ##  The atomic API is used for all work and queue flags fields to
      ##  enforce sequential consistency in SMP environments.
      ##
      ##  Bits that represent the work item states.  At least nine of the
      ##  combinations are distinct valid stable states.
      ##
  K_WORK_RUNNING_BIT* = 0
  K_WORK_CANCELING_BIT* = 1
  K_WORK_QUEUED_BIT* = 2
  K_WORK_DELAYED_BIT* = 3
  K_WORK_MASK* = BIT(K_WORK_DELAYED_BIT) or BIT(K_WORK_QUEUED_BIT) or
      BIT(K_WORK_RUNNING_BIT) or BIT(K_WORK_CANCELING_BIT) ##  Static work flags
  K_WORK_DELAYABLE_BIT* = 8
  K_WORK_DELAYABLE* = BIT(K_WORK_DELAYABLE_BIT) ##  Dynamic work queue flags
  K_WORK_QUEUE_STARTED_BIT* = 0
  K_WORK_QUEUE_STARTED* = BIT(K_WORK_QUEUE_STARTED_BIT)
  K_WORK_QUEUE_BUSY_BIT* = 1
  K_WORK_QUEUE_BUSY* = BIT(K_WORK_QUEUE_BUSY_BIT)
  K_WORK_QUEUE_DRAIN_BIT* = 2
  K_WORK_QUEUE_DRAIN* = BIT(K_WORK_QUEUE_DRAIN_BIT)
  K_WORK_QUEUE_PLUGGED_BIT* = 3
  K_WORK_QUEUE_PLUGGED* = BIT(K_WORK_QUEUE_PLUGGED_BIT) ##  Static work queue flags
  K_WORK_QUEUE_NO_YIELD_BIT* = 8
  K_WORK_QUEUE_NO_YIELD* = BIT(K_WORK_QUEUE_NO_YIELD_BIT) ## *
                                                        ##  INTERNAL_HIDDEN @endcond
                                                        ##
                                                        ##  Transient work flags
                                                        ## * @brief Flag indicating a work item that is running under a work
                                                        ##  queue thread.
                                                        ##
                                                        ##  Accessed via k_work_busy_get().  May co-occur with other flags.
                                                        ##
  K_WORK_RUNNING* = BIT(K_WORK_RUNNING_BIT) ## * @brief Flag indicating a work item that is being canceled.
                                          ##
                                          ##  Accessed via k_work_busy_get().  May co-occur with other flags.
                                          ##
  K_WORK_CANCELING* = BIT(K_WORK_CANCELING_BIT) ## * @brief Flag indicating a work item that has been submitted to a
                                              ##  queue but has not started running.
                                              ##
                                              ##  Accessed via k_work_busy_get().  May co-occur with other flags.
                                              ##
  K_WORK_QUEUED* = BIT(K_WORK_QUEUED_BIT) ## * @brief Flag indicating a delayed work item that is scheduled for
                                        ##  submission to a queue.
                                        ##
                                        ##  Accessed via k_work_busy_get().  May co-occur with other flags.
                                        ##
  K_WORK_DELAYED* = BIT(K_WORK_DELAYED_BIT)


# proc Z_WORK_INITIALIZER*(work_handler: untyped) {.importc: "Z_WORK_INITIALIZER",
    # header: "kernel.h".}


# proc Z_WORK_DELAYABLE_INITIALIZER*(work_handler: untyped) {.
    # importc: "Z_WORK_DELAYABLE_INITIALIZER", header: "kernel.h".}


## *
##  @brief Initialize a statically-defined delayable work item.
##
##  This macro can be used to initialize a statically-defined delayable
##  work item, prior to its first use. For example,
##
##  @code static K_WORK_DELAYABLE_DEFINE(<dwork>, <work_handler>); @endcode
##
##  Note that if the runtime dependencies support initialization with
##  k_work_init_delayable() using that will eliminate the initialized
##  object in ROM that is produced by this macro and copied in at
##  system startup.
##
##  @param work Symbol name for delayable work item object
##  @param work_handler Function to invoke each time work item is processed.
##
# proc K_WORK_DELAYABLE_DEFINE*(work: untyped; work_handler: untyped) {.
    # importc: "K_WORK_DELAYABLE_DEFINE", header: "kernel.h".}


## *
##  @cond INTERNAL_HIDDEN
##

const
  K_WORK_USER_STATE_PENDING* = 0 ##  Work item pending state

## *
##  INTERNAL_HIDDEN @endcond
##
# proc Z_WORK_USER_INITIALIZER*(work_handler: untyped) {.
    # importc: "Z_WORK_USER_INITIALIZER", header: "kernel.h".}


## *
##  @brief Initialize a statically-defined user work item.
##
##  This macro can be used to initialize a statically-defined user work
##  item, prior to its first use. For example,
##
##  @code static K_WORK_USER_DEFINE(<work>, <work_handler>); @endcode
##
##  @param work Symbol name for work item object
##  @param work_handler Function to invoke each time work item is processed.
##
# proc K_WORK_USER_DEFINE*(work: untyped; work_handler: untyped) {.
    # importc: "K_WORK_USER_DEFINE", header: "kernel.h".}


## *
##  @brief Initialize a userspace work item.
##
##  This routine initializes a user workqueue work item, prior to its
##  first use.
##
##  @param work Address of work item.
##  @param handler Function to invoke each time work item is processed.
##
##  @return N/A
##
proc k_work_user_init*(work: ptr k_work_user; handler: k_work_user_handler_t) {.
    importc: "$1", header: "kernel.h".}

## *
##  @brief Check if a userspace work item is pending.
##
##  This routine indicates if user work item @a work is pending in a workqueue's
##  queue.
##
##  @note Checking if the work is pending gives no guarantee that the
##        work will still be pending when this information is used. It is up to
##        the caller to make sure that this information is used in a safe manner.
##
##  @funcprops \isr_ok
##
##  @param work Address of work item.
##
##  @return true if work item is pending, or false if it is not pending.
##
proc k_work_user_is_pending*(work: ptr k_work_user): bool {.
    importc: "$1", header: "kernel.h".}
